--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ main {
 .content-section {
   width: 100%;
   margin: 0 auto;
+  
 }
 
 .header {
@@ -19,6 +20,7 @@ main {
 .header__links-list {
   display: flex;
   gap: 32px;
+  
 }
 
 .header__links-list-item {
@@ -52,6 +54,7 @@ main {
 
 .header__logo-image {
   width: 100%;
+  font-style: normal
 }
 
 .address {
@@ -186,7 +189,7 @@ main {
 }
 
 .lost__card-list-item {
-  height: 100%;
+  min-height: 563px;
 }
 
 .card-link {
@@ -197,30 +200,29 @@ main {
 .card {
   position: relative;
   display: flex;
+  width: 334px;
   flex-direction: column;
   justify-content: space-between;
-  gap: 30px;
-  width: auto;
   height: 100%;
-  padding: 50px 40px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 51px 40px 48px;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  
 }
 
 .card__title {
