--- a/styles/style.css
+++ b/styles/style.css
@@ -12,9 +12,9 @@ main {
 
 .header {
   display: grid;
-  grid-template-columns: 1.51fr 2fr 1.5fr;
+  grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 51px 89px;
+  padding: 92px 50px 92px;
 }
 
 .header__links-list {
@@ -37,8 +37,8 @@ main {
 }
 
 .text-link:hover {
-  background-color: #000000;
-  color: #FFF;
+  background-color: #fff
+  
 }
 
 .header__link_active {
@@ -47,14 +47,14 @@ main {
 
 .header__logo {
   display: block;
-  justify-self: center;
-  align-self: center;
   width: 140px;
 }
 
 .header__logo-image {
   width: 100%;
-  font-style: normal
+  display: block;
+  font-style: normal;
+  
 }
 
 .address {
@@ -63,7 +63,8 @@ main {
 
 .header__address {
   justify-self: end;
-  font-style: inherit;
+  font-style: normal;
+  width: 237px;
 }
 
 .address__item {
@@ -170,11 +171,12 @@ main {
 }
 
 .lots {
-  padding: 0 50px;
+  padding: 0 24px;
 }
 
 .lots__heading {
-  padding: 0 0 30px 40px;
+  padding-left: 40px;
+  margin-bottom: 30px;
   font-weight: bold;
   font-size: 40px;
   line-height: 1;
@@ -257,7 +259,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 24px;
-  padding: 0 50px;
+  padding: 0 24px;
 }
 
 .about__column {
